Spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -476,6 +476,10 @@ button.navbar-toggle:hover {
 	min-height: 100vh;
 }
 
+.secondSection {
+	padding-top: 0vh;
+}
+
 /*desktop*/
 @media (min-width: 969px){
 	section {
